# polly-ai

./: .env.example  Makefile  README.md  SPEC.md  buf.gen.yaml  docker-compose.yml  package.json  pnpm-lock.yaml
docs/: ARCHITECTURE.md  (+7 more)
server/: README.md  pyproject.toml
server/src/democrata_server/: main.py
server/src/democrata_server/adapters/agents/: composer.py  extractor.py  factory.py  planner.py  retriever.py  verifier.py
server/src/democrata_server/adapters/auth/: __init__.py  supabase.py
server/src/democrata_server/adapters/billing/: __init__.py  stripe.py
server/src/democrata_server/adapters/cache/: redis.py
server/src/democrata_server/adapters/llm/: components.py  constraints.py  langchain_client.py  ollama_client.py
server/src/democrata_server/adapters/storage/: __init__.py  postgres.py  qdrant.py
server/src/democrata_server/adapters/usage/: __init__.py  logger.py  memory_store.py
server/src/democrata_server/api/http/: __init__.py  deps.py
server/src/democrata_server/domain/agents/: ports.py
server/src/democrata_server/domain/auth/: __init__.py  entities.py  ports.py
server/src/democrata_server/domain/billing/: __init__.py  entities.py  ports.py
server/src/democrata_server/domain/orgs/: __init__.py  entities.py  ports.py
server/src/democrata_server/domain/rag/: use_cases.py
server/src/democrata_server/domain/usage/: __init__.py  entities.py  ports.py
server/src/polly_pipeline_server/: __init__.py  main.py
server/src/polly_pipeline_server/adapters/agents/: composer.py  extractor.py  planner.py  retriever.py  schemas.py
server/src/polly_pipeline_server/adapters/llm/: config.py
server/src/polly_pipeline_server/adapters/storage/: qdrant.py
server/src/polly_pipeline_server/domain/ingestion/: entities.py  use_cases.py
server/tests/: test_agents.py  test_api.py  test_domain.py  test_llm_factory.py  test_main.py
(+30 files in other folders)
